--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1>Learning Management System</h1>
+            <h1>Learning Management System (eLMS)</h1>
         </header>
         <nav class="site-nav">
             <ul>
